# test-poetry

./: README.md  pyproject.toml
poetry_demo/: main.py
