[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["khernandezr <khernandezr@lacreativeria.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^2.1.2"

[tool.poetry.scripts]
my-script = "poetry_demo.main:log"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
